# johnfreeman.dev

./: .env.example  .gitignore  .npmrc  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bun.lockb  compose.yaml  composer.json  config.php  docker-compose.yml  package-lock.json  package.json  production.yaml  tailwind.config.js  vite.config.js  webpack.mix.js
.devcontainer/: devcontainer.json
app/: Myself.php  Post.php  helpers.php
app/Auth/: AuthenticatesRequests.php  Root.php  SuperUserProvider.php
app/Exceptions/: Handler.php
app/Http/: TerminalResponse.php
app/Mail/: ContactMessage.php  MessageCreated.php
app/Models/: Post.php
app/Providers/: AppServiceProvider.php  AuthServiceProvider.php  GhostServiceProvider.php
app/Services/: Ghost.php
assets/css/: app.css
assets/templates/: _form.html  _layout.html  _macros.html  about.html  ascii.html  blank.html  blog.html  built-with.html  clear.html  command-error.html  contact.html  error.html  hello.html  help.html  intro.html  menu.html  social.html  success.html
config/: app.php  auth.php  logging.php  mail.php  services.php
database/migrations/: 2022_12_07_055352_create_posts_table.php  2023_02_28_230956_recreate_posts_table.php
migrations/: 20231107002144_posts.sql
public/css/: app.css  main.css
public/js/: app.js  index.js
public/source-code-pro/: source-code-pro.css
resources/css/: main.css
resources/js/: api.js  app.js  bootstrap.js  index.js
routes/: api.php  web.php
source/: about.blade.php  index.blade.php
src/: app.rs  controllers.rs  error.rs  main.rs  models.rs  routes.rs  templates.rs
src/auth/: user.rs
tests/: TestCase.php
(+112 files in other folders)
