[package]
name = "johnfreeman-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
axum = "0.7"
axum-extra = "0.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-humanize = "0.2.3"
dotenvy = "0.15.7"
lettre = "0.11.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls", "chrono", "macros", "migrate"] }
strum = "0.25.0"
strum_macros = "0.25.3"
tokio = { version = "1.38.2", features = ["full"] }
tower = { version = "0.4.13", features = ["tokio", "util"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }
